# cdh1-cancer-res

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
artifacts/: checkpoint_calibration.csv  demo_dataset.csv
artifacts/demo_checkpoints/: aggregator_fold_0.ckpt  aggregator_fold_0.tsckpt  aggregator_fold_1.ckpt
artifacts/demo_embeddings/: demo_slide_1.csv  demo_slide_2.csv  demo_slide_3.csv
src/cdh1_cancer_dis/: ensemble.py
src/cdh1_cancer_res/: data.py  ensemble.py  env_var.py  model.py  predict.py  script_ensemble.py  structs.py
